# git-repo-data-cmake

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  gitrepodata.code-workspace
cmake/: GitRepoData.cmake  GitRepoData.md
example/: CMakeLists.txt  CMakePresets.json  README.md  example.cc
example/include/: example-git-version.hh
